Fix logo alignment to be uniform with main Nonverse site

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,7 +12,7 @@
     body {
         background-color: $body-bg;
         .nv-logo {
-            margin: 3vh 0 0 3vh;
+            margin: 3.5vh 0 0 2vw;
         }
     }
 }
